Prevent items from scrolling off screen behind navbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -5,8 +5,3 @@
 @import './stylesheets/header.scss';
 @import './stylesheets/review.scss';
 @import './stylesheets/submitStory.scss';
-
-
-.App {
-  text-align: center;
-}
