--- a/src/stylesheets/header.scss
+++ b/src/stylesheets/header.scss
@@ -3,10 +3,9 @@
   color: white;
   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
   position: fixed;
-  // position: top;
+  top: 0;
   width: 100%;
   z-index: 3;
-  // margin-bottom: 50px;
 }
 
 .header a,
@@ -123,4 +122,8 @@
   .header .menu-icon {
     display: none;
   }
+}
+
+.logout {
+  cursor: pointer;
 }
