--- a/src/stylesheets/review.scss
+++ b/src/stylesheets/review.scss
@@ -13,7 +13,7 @@ $break-phone: 500px;
     margin: 5px;
   }
 
-  @media screen and (max-width: $break-phone) {
+  @media (max-width:$small) {
     width: 95%;
 
     img {
@@ -33,7 +33,7 @@ button {
 }
 
 .reject-button {
-  background-color: red;
+  background-color: rgb(228, 37, 37);
 }
 
 .reject-button:hover {
